# MarketWatch

./: .gitignore  CLI.md  README.md  environment.yml  pyproject.toml
src/marketwatch/: __init__.py
src/marketwatch/cli/: app.py
src/marketwatch/core/: analytics.py  events.py  state.py  timeline.py  validation.py
src/marketwatch/prices/: base.py  yahoo.py
src/marketwatch/storage/: config.py  ledger.py  paths.py
src/marketwatch/ui/: app.py
tests/: conftest.py  test_corrections_and_config.py  test_dividends.py  test_events_and_ledger.py  test_invest_analytics.py  test_paths_and_reset.py  test_status_snapshot.py  test_timeline_baseline.py  test_validation.py  test_whatsup_analytics.py  test_yahoo_provider.py
