[project]
name = "marketwatch"
version = "0.1.0"
description = "CLI and dashboard to track a USD portfolio across brokers and analyze allocation decisions."
readme = "CLI.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vinay", email = "example@example.com" }
]
dependencies = [
  "typer[all]>=0.12.0",
  "streamlit>=1.40.0",
  "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.10.0",
  "ruff>=0.6.0",
]

[project.scripts]
mw = "marketwatch.cli.app:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]



